tests/neg/i6795-b.check
-- Error: tests/neg/i6795-b.scala:1:11 ---------------------------------------------------------------------------------
1 |sealed def y: Int = 1 // error
  |           ^
  |            values cannot be sealed
